# django-orm-practice

./: .gitignore  README.md  prelude.sh  pyproject.toml
src/core/: settings.py
src/exam/: models.py  utils.py
src/exam/management/commands/: fill_db.py
src/exam/migrations/: 0001_initial.py
