[tool.poetry]
name = "orm-practice"
version = "0.1.0"
description = ""
authors = ["ikhabib"]
readme = "README.md"
packages = [{include = "orm_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-extensions = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
